VERSION 0.4.2

IN PROGRESS

* Surface map now shows visited regions
+ Weather effects: rain, acid rain, tornado, meteors

=============================================

VERSION 0.4.1

21.04.2015

+ Trade system
+ Alien ships now drop loot
* Patched nifty-gui to allow lists have elements with different height
* Some new music
+ 3 new colony quests
+ English translation completed
+ Hints on a galaxy map
* Improved private messages gui
* Dumping resources to the shuttle
+ Confirmation before attacking a friendly ship

=============================================

VERSION 0.4.0

05.12.2014

* Global refactoring of game object classes
+ Ship inventory screen
+ Officer dialog system
+ "Inside" encounter
+ "Red meat" encounter
* Dungeons now do not advance turn count and star date
* Split journal quest tab into 'completed' and 'active' tabs
* New officer portraits
* New ship art
* Events that can be met only in given range from solar system
+ Help popups
* Dungeon monster descriptions now moved to json out of map files

=============================================

VERSION 0.3.2

17.07.2014

* Target selection popup
* Realistic planet shading
+ Bork family problems event
+ 2 new music tracks

=============================================

VERSION 0.3.1

06.06.2014

* Bugfixes
* Crafting of items on board of ship now requires resources
* Improvements for landing party screen (cancel button and hints)
+ Star systems can now have asteroid fields
+ Chance for crew members to die on aggressive planets from any wound
* Nicer fog of war border

===============================================

VERSION 0.3.0

25.05.2014

+ Star map: hints and quest locations.
+ Music tracks for all races
+ Tool to generate all dialogs in one click
* New intro
+ Ship upgrade system
+ New quests
+ In-game links for blog and bugtracker
+ Hints for interface items, tooltips with weapon parameters

=================================================

VERSION 0.2.2

01.04.2014

+ 2 new music tracks