@@ -201,6 +201,9 @@ settings.resolution=Screen resolution:
 settings.fullscreen=Fullscreen
 settings.music_volume=Music volume:
 settings.sound_volume=Sound volume:
+settings.locale=Language (requires game restart):
+settings.restart_confirm=The game must be restarted for some changes to take effect. Restart now?
+settings.restart=Restart
 
 country_select.title=Choose the leading country in the project:
 
